// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm Login should render login form 1`] = `
<body>
  <div>
    <div
      class="sc-AxjAm kyfgSK"
    >
      <form
        autocomplete="off"
        novalidate=""
      >
        <div
          class="error-message"
          id="error-message"
        >
          <div />
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="email"
              id="email"
              name="email"
              value=""
            />
            <label
              for="email"
            >
              Email
            </label>
            <i
              class="fa fa-user-circle-o"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="password"
              id="password"
              name="password"
              type="password"
              value=""
            />
            <label
              for="password"
            >
              Password
            </label>
            <i
              class="fa fa-lock"
            />
          </div>
        </div>
        <div
          class="p-col-12 button-container"
        >
          <button
            class="p-button p-component p-button-raised p-button-text-only"
            data-testid="submit"
            type="submit"
          >
            <span
              class="p-button-text p-c"
            >
              Login
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;

exports[`AuthForm Register should render register form 1`] = `
<body>
  <div>
    <div
      class="sc-AxjAm kyfgSK"
    >
      <form
        autocomplete="off"
        novalidate=""
      >
        <div
          class="error-message"
          id="error-message"
        >
          <div />
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="firstName"
              id="firstName"
              name="firstName"
              value=""
            />
            <label
              for="firstName"
            >
              First Name
            </label>
            <i
              class="fa fa-user-circle-o"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="lastName"
              id="lastName"
              name="lastName"
              value=""
            />
            <label
              for="lastName"
            >
              Last Name
            </label>
            <i
              class="fa fa-user-circle-o"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="company"
              id="company"
              name="company"
              value=""
            />
            <label
              for="company"
            >
              Company
            </label>
            <i
              class="fa fa-building-o"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              id="phone"
              name="phone"
              type="text"
            />
            <label
              for="phone"
            >
              Phone
            </label>
            <i
              class="fa fa-phone"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="email"
              id="email"
              name="email"
              value=""
            />
            <label
              for="email"
            >
              Email
            </label>
            <i
              class="fa fa-user-circle-o"
            />
          </div>
        </div>
        <div
          class="p-col-12"
        >
          <div
            class="input-wrapper p-float-label"
          >
            <input
              class="p-inputtext p-component"
              data-testid="password"
              id="password"
              name="password"
              type="password"
              value=""
            />
            <label
              for="password"
            >
              Password
            </label>
            <i
              class="fa fa-lock"
            />
          </div>
        </div>
        <div
          class="p-col-12 button-container"
        >
          <button
            class="p-button p-component p-button-raised p-button-text-only"
            data-testid="submit"
            type="submit"
          >
            <span
              class="p-button-text p-c"
            >
              Register
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;
